[gd_scene load_steps=11 format=3 uid="uid://dtq62npobarrg"]

[ext_resource type="Script" path="res://environment/Deliverable/monitor.gd" id="1_rk7gr"]
[ext_resource type="PackedScene" uid="uid://dgoew8n287ffv" path="res://environment/Deliverable/pie_spawn.tscn" id="2_5srhe"]
[ext_resource type="ArrayMesh" uid="uid://dv1npb1nprt6w" path="res://assets/basic-computer-monitor-tv-lowpoly/source/MONITOR/MONITOR.obj" id="3_l7sul"]
[ext_resource type="Script" path="res://environment/Deliverable/textbox.gd" id="4_lb14m"]
[ext_resource type="Texture2D" uid="uid://bbe1r7wigcbb7" path="res://assets/selfmadeassets/textbox.png" id="5_yx2ks"]
[ext_resource type="PackedScene" uid="uid://depddl1urdch2" path="res://keyboard/button/Button.tscn" id="6_s3odl"]
[ext_resource type="Texture2D" uid="uid://g7qtxqbwsaht" path="res://icon.svg" id="7_3w1fc"]
[ext_resource type="PackedScene" uid="uid://c36iqm4lgt4rn" path="res://keyboard/vrkeyboard.tscn" id="8_jqeya"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_amfea"]
points = PackedVector3Array(-1.67377, 0.298933, 0.0111782, 1.52865, 2.21499, 0.0573132, 0.504428, 0.0332532, 0.436274, 0.469107, 0.164857, -0.433593, -1.62018, 2.31773, 0.0111782, 1.72667, 0.298933, 0.0111782, -0.451195, 0.352023, -0.466966, -0.451195, -0.0200658, 0.436274, 1.67341, 2.31773, 0.0111782, -0.425077, 0.0438492, -0.341809, 0.504428, 0.352023, -0.466966, -1.47517, 2.21479, 0.0573, 0.478808, 0.0425879, -0.342181, -1.67377, 2.26441, 0.0111782, 1.72667, 2.26441, 0.0111782, 0.504428, -0.0200658, 0.436274, 1.66932, 0.327598, 0.0616284, -1.61642, 0.327598, 0.0616284, -0.417081, 0.162228, -0.434711, -0.451195, 0.0332532, 0.436274, -1.52277, 2.16534, 0.0572406, 1.57587, 2.16547, 0.0572497)

[sub_resource type="BoxMesh" id="BoxMesh_enngg"]
size = Vector3(0.05, 0.01, 0.05)

[node name="Monitor" type="RigidBody3D"]
script = ExtResource("1_rk7gr")

[node name="PieSpawn" parent="." instance=ExtResource("2_5srhe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.63862, 0)

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = ExtResource("3_l7sul")

[node name="Screen" type="Node3D" parent="Model"]

[node name="Label3D" type="Label3D" parent="Model/Screen"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 1.65197, 0.0578395)
pixel_size = 0.001
text = "Cheat Code:"

[node name="Password" type="Label3D" parent="Model/Screen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25861, 0.08)
script = ExtResource("4_lb14m")

[node name="Textbox" type="Sprite3D" parent="Model/Screen/Password"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -0.01)
texture = ExtResource("5_yx2ks")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_amfea")

[node name="ScreenPower" parent="." instance=ExtResource("6_s3odl")]
transform = Transform3D(0.8, 0, 0, 0, 0.0158326, -0.799843, 0, 0.799843, 0.0158326, 0, 0.0991491, 0.0138926)
mesh = SubResource("BoxMesh_enngg")

[node name="Sprite3D" type="Sprite3D" parent="ScreenPower"]
transform = Transform3D(0.04, 0, 0, 0, -1.57161e-09, 0.04, 0, -0.04, -1.57161e-09, 0, 0.006, 0)
texture = ExtResource("7_3w1fc")

[node name="KeyboardPower" parent="." instance=ExtResource("6_s3odl")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.00883441, 0.043785)
mesh = SubResource("BoxMesh_enngg")

[node name="Sprite3D" type="Sprite3D" parent="KeyboardPower"]
transform = Transform3D(0.04, 0, 0, 0, -1.57161e-09, 0.04, 0, -0.04, -1.57161e-09, 0, 0.006, 0)
texture = ExtResource("7_3w1fc")

[node name="VRKeyboard" parent="KeyboardPower" instance=ExtResource("8_jqeya")]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0.08, 0.4)
visible = false
enabled = false

[connection signal="text_submitted" from="Model/Screen/Password" to="." method="_on_password_text_submitted"]
[connection signal="pressed" from="ScreenPower" to="." method="_on_screen_power_pressed"]
[connection signal="pressed" from="KeyboardPower" to="." method="_on_keyboard_power_pressed"]
[connection signal="pressed" from="KeyboardPower/VRKeyboard" to="Model/Screen/Password" method="_on_vr_keyboard_pressed"]
